# cloudops-sandbox

./: .env  .env.template  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  LICENSE  Makefile  README.md
docs/posts/: cloudops-sandbox-article.md
scripts/: bootstrap-vm.sh  remote-deploy.sh  remote-sync.sh  services-down.sh  services-up.sh  setup.sh  stacks-down.sh  stacks-up.sh
scripts/ci/: remote-deploy.sh  remote-sync.sh
services/ai-dev-orchestrator/: .dockerignore  .env.template  Dockerfile  README.md  TASKS.md  docker-compose.yml  pyproject.toml
services/ai-dev-orchestrator/ai_dev_orchestrator/: config.py  main.py  models.py  run_store.py  runtime.py  security.py  service.py
services/ai-dev-orchestrator/jira-gitlab-ai-workflow/: how_to_guide.md  task.md
services/ai-dev-orchestrator/tests/: test_api.py
services/grafana/: .env.template  docker-compose.yml
services/keycloak/: .env.template  docker-compose.yml
services/mysql/: .env.template  docker-compose.yml
services/n8n/: .env.template  docker-compose.yml
services/pgsql/: .env.template  docker-compose.yml
services/portainer/: .env.template  docker-compose.yml
services/prometheus/: docker-compose.yml
services/traefik/: .env.template  docker-compose.yml
services/wud/: docker-compose.yml
stacks/adminer/: .env.template  docker-compose.yml
stacks/mysql/: docker-compose.yml
stacks/n8n/: docker-compose.yml
stacks/pgsql/: docker-compose.yml
stacks/phpmyadmin/: .env.template  docker-compose.yml
stacks/prometheus/: .env.template  docker-compose.yml
stacks/wud/: .env.template
(+3 files in other folders)
