[project]
name = "ai-dev-orchestrator"
version = "0.1.0"
description = "Jira to GitLab AI orchestration service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.0,<9.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ai_dev_orchestrator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
